--- a/apps/note_area/templates/note.html
+++ b/apps/note_area/templates/note.html
@@ -1452,7 +1452,7 @@ function viewPeriodPanel(){
                         }
                     }, 1000);
                 }else{
-                    alert(res.error)
+                    alert(res.error);
                 }
             }
         }); // end of ajax
