--- a/apps/all_notes_area/static/css/all_notes_style.css
+++ b/apps/all_notes_area/static/css/all_notes_style.css
@@ -37,22 +37,8 @@
     margin-top: 0.3rem;
 }
 
-/* 搜尋圖標的hover效果 */
-.search-icon {
-    position: relative;
-    cursor: pointer;
-}
-
-.search-icon:hover::after {
-    content: "搜尋";
-    position: absolute;
-    top: -20px; /* Adjust this value to position the text */
-    right: calc(100% + 3px);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 5px;
-    border-radius: 5px;
-    white-space: nowrap;
+.search-container-group {
+    display: none;
 }
 
 /* 搜尋框的樣式 */
@@ -66,7 +52,7 @@
     /*position: absolute;
     left: 3px;
     top: 57%;*/
-    font-size: 20px; /* Adjusted size */
+    font-size: 25px; /* Adjusted size */
     /*transform: translateY(-45%);*/
     color: #888;
 }
@@ -77,7 +63,7 @@
     border-radius: 5px;
     border: 1px solid #ccc;
     height: 30px; /* Adjust as needed */
-    width: 150px;
+    width: 180px;
     font-size: 18px;
     outline: none;
 }
